[tool.poetry]
name = "fund-transfer-scheduler"
version = "0.1.0"
description = "Python script to optimize fund transfers between a parent company and its subsidiary companies"
authors = ["kushagra <kushagra225@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
